# libro-server

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: heroku.yml
dev-config/: jupyter_server_config.py
docker/: jupyter_server_config.py  start.sh
examples/: agent.ipynb  demo.ipynb  execute.ipynb  fin.ipynb  fin.py  fin_client.py  latex.ipynb  llm-gradio.ipynb  llm.ipynb  parameterized.ipynb  test.ipynb  test_output.ipynb  tool.ipynb  widgets-interactive.ipynb  widgets.ipynb
examples/hackthon/: answer_metaphysics.ipynb
examples/hackthon/res/: answer_metaphysics.ipynb
lab/: .umirc.ts  package.json  routes.ts  tsconfig.json
lab/src/: app.ts
lab/src/modules/: demo-view.tsx  libro-hackthon-module.ts  libro-hackthon-view.tsx
lab/src/modules/hackthon/: demo-view.tsx  libro-hackthon-chatbot-view.tsx  libro-hackthon-command-contribution.tsx  libro-hackthon-module.ts  libro-hackthon-view.tsx
lab/src/pages/dbgpt/: app.ts  index.less  index.tsx
lab/src/pages/execution/: default-dnd-content.tsx  dnd-cell-item-render.tsx  execution-file.tsx  execution-view.tsx  index.less  libro-app-view.tsx
lab/src/pages/hackthon/: index.tsx
lab/src/pages/interaction/: execution-file.tsx  execution-view.tsx  index.less  libro-app-view.tsx
lab/src/pages/interpreter/: app.ts  index.less  index.tsx  libro-interpreter-view.tsx
lab/src/pages/libro/: app.ts  index.less  index.tsx  test-command-contribution.tsx  test-command.tsx  widget-rendermime-contribution.ts
lab/src/pages/libro/progress/: contribution.ts  view.tsx
lab/src/pages/libro/prompt-cell/: file-select-modal-contribution.ts  file-select-modal.tsx  index.less  index.ts  libro-formatter-prompt-magic-contribution.ts  libro-llm-render.tsx  prompt-cell-model.ts  prompt-cell-view.tsx  prompt-helper.ts  prompt-output-rendermime-contribution.ts  prompt-script.ts
lab/src/pages/libro/prompt-cell/input-handler/: chat-record-input.tsx
lab/src/pages/libro/schema-form-widget/: contribution.ts  index.ts  string-input.less  string-input.tsx  view.tsx
lab/typings/: index.d.ts
libro/: pyproject.toml
libro-ai/: pyproject.toml
libro-ai/libro_ai/: pyproject.toml
libro-ai/libro_ai/chat/: __init__.py  item.py  openai.py  openai_chat_executor.py
libro-ai/libro_ai/flow/: __init__.py  libro_client.py  nb_args.py
libro-ai/libro_ai/magics/: __init__.py
libro-ai/libro_ai/utils/: langchain.py
libro-ai/src/libro_ai/: __init__.py  _version.py  extensions.py  libro_ai_handler.py
libro-ai/src/libro_ai/chat/: __init__.py  debug_executor.py  debug_provider.py  executor.py  fin.py  interpreter_executor.py  interpreter_provider.py  langchain_variable.py  langchain_variable_executor.py  object.py  object_manager.py  openai.py  openai_chat_executor.py  openai_chat_provider.py  provider.py  qwen_chat_executor.py  qwen_chat_provider.py  source.py  tongyi.py  tongyi_chat_executor.py  tongyi_chat_provider.py  tongyi_executor.py  utils.py
libro-ai/src/libro_ai/flow/: libro_client.py  nb_args.py
libro-ai/src/libro_ai/magics/: __init__.py  exception.py  prompt_magic.py
libro-core/: pyproject.toml
libro-core/src/libro_core/: config.py
libro-flow/: pyproject.toml
libro-flow/src/libro_flow/: __init__.py  libro_client.py  libro_execution.py  libro_schema_form_widget.py
libro-server/: .gitignore  pyproject.toml
libro-server/src/dev-config/: jupyter_server_config.py
libro-server/src/libro_server/: __init__.py  _version.py  app.py  entrypoint.py  execution_handler.py  generate_libro_config.py  hackthon_globals.py  handler.py  jupyter_config.py  libro_ai_handler.py  libro_kernel_manager.py  login_handler.py  static_handler.py  upload_handler.py  zxz_handler.py
libro-server/src/libro_server/hackthon/: agent.py  chat_handler.py  tool.py  utils.py
libro-server/src/libro_server/templates/: libro.html
libro-sql/: pyproject.toml
libro-sql/src/libro_sql/: database.py  extensions.py  sql_magic.py
libro/src/libro/: _version.py
libro_server/: __init__.py  app.py  extensions.py  handler.py
libro_server/chat/: __init__.py  chat_message.py  chat_record.py  executor.py  item.py  langchain_variable.py  langchain_variable_executor.py  object.py  object_manager.py  openai.py  openai_chat_executor.py  provider.py  source.py
libro_server/flow/: libro_client.py
libro_server/magics/: __init__.py  prompt_magic.py
libro_server/model/: __init__.py  base_model.py  registry.py
libro_server/template/: libro.html
libro_server/templates/: libro.html
libro_server/utils/: __init__.py  inspector.py  langchain.py
