[project]
name = "libro-ai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zhanba", email = "c5e1856@gmail.com" }
]
dependencies = [
    "langchain>=0.1.14",
    "ipython>=8.23.0",
    "pydantic>=2.6.4",
    "requests>=2.31.0",
    "nbclient>=0.10.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "langchain-openai>=0.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libro_ai"]
