[project]
name = "libro"
version = "0.1.16"
description = "libro"
authors = [
    { name = "brokun", email = "brokun0128@gmail.com" },
    { name = "sunshinesmilelk", email = "ximo.lk66@gmail.com" },
    { name = "zhanba", email = "c5e1856@gmail.com" },
]
dependencies = [
    "libro-server>=0.1.1",
    "libro-sql>=0.1.5",
    "libro-ai>=0.1.4",
]
dev-dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libro"]
